corrected code after check up the html code by W3C

--- a/index.html
+++ b/index.html
@@ -18,20 +18,19 @@
 	<script src="./assets/maugallery.js" defer ></script>
 	<script src="./assets/scripts.js" defer ></script>
 	<link rel="icon" href="assets/images/favicon.ico">
-	<meta http-equiv="Permissions-Policy" content="interest-cohort=()"/>
-	<meta property="og:site_name" content="Nina Carducci" />
-	<meta property="og:type" content="website" />
+	<meta property="og:site_name" content="Nina Carducci">
+	<meta property="og:type" content="website">
 	<meta property="fb:app_id" content="your_app_id_goes_here">
-	<meta property="og:url" content="https://yoonju88.github.io/Projet_9-NinaCarducci/" />
-	<meta property="og:title" content="Nina Carducci - photograph" />
-	<meta property="og:description" content="Nina Carducci est une photographe française, spécialisée dans la prise de vos moments les plus précieux." />
-	<meta property="og:image" content="https://raw.githubusercontent.com/yoonju88/Projet_9-NinaCarducci/main/assets/images/nina-opengraph.webp" />
-	<meta name="twitter:card" content="summary" />
-	<meta name="twitter:site" content="@Ninacarducci" />
-	<meta name="twitter:title" content="Nina Carducci - photograph" />
-	<meta name="twitter:description" content="Nina Carducci est une photographe française, spécialisée dans la prise de vos moments les plus précieux." />
-	<meta name="twitter:image" content="https://raw.githubusercontent.com/yoonju88/Projet_9-NinaCarducci/main/assets/images/nina_twitter.webp" />
-	<meta name="twitter:url" content="https://yoonju88.github.io/Projet_9-NinaCarducci/" />
+	<meta property="og:url" content="https://yoonju88.github.io/Projet_9-NinaCarducci/">
+	<meta property="og:title" content="Nina Carducci - photograph" >
+	<meta property="og:description" content="Nina Carducci est une photographe française, spécialisée dans la prise de vos moments les plus précieux.">
+	<meta property="og:image" content="https://raw.githubusercontent.com/yoonju88/Projet_9-NinaCarducci/main/assets/images/nina-opengraph.webp">
+	<meta name="twitter:card" content="summary" >
+	<meta name="twitter:site" content="@Ninacarducci">
+	<meta name="twitter:title" content="Nina Carducci - photograph">
+	<meta name="twitter:description" content="Nina Carducci est une photographe française, spécialisée dans la prise de vos moments les plus précieux.">
+	<meta name="twitter:image" content="https://raw.githubusercontent.com/yoonju88/Projet_9-NinaCarducci/main/assets/images/nina_twitter.webp">
+	<meta name="twitter:url" content="https://yoonju88.github.io/Projet_9-NinaCarducci/">
 	<script type="application/ld+json">
 		{
 			"@context": "http://schema.org",
@@ -75,27 +74,27 @@
 					<div class="carousel-item active">
 						<img src="./assets/images/slider/banner-slide-1-man-m.webp" class="d-block w-100" 
 						srcset="./assets/images/slider/banner-slide-1-man-s.webp 500w, ./assets/images/slider/banner-slide-1-man-m.webp 1200w"
-						sizes="(max-width: 500px) 500px, 1200px" width="1200px" height="555px"
+						sizes="(max-width: 500px) 500px, 1200px" width="1200" height="555"
 						alt="Banner image 1 man" >
 					</div>
 					<div class="carousel-item">
 						<img src="./assets/images/slider/banner-slide-2-peoples-m.webp" class="d-block w-100" 
 						srcset="./assets/images/slider/banner-slide-2-peoples-s.webp 500w, ./assets/images/slider/banner-slide-2-peoples-m.webp 1200w"
-						sizes="(max-width: 500px) 500px, 1200px" width="1200px" height="555px"
+						sizes="(max-width: 500px) 500px, 1200px" width="1200" height="555"
 						alt="Banner image 2 peoples" loading="lazy">
 					</div>
 					<div class="carousel-item">
 						<img src="./assets/images/slider/banner-slide-3-marriage-m.webp" class="d-block w-100"
 						srcset="./assets/images/slider/banner-slide-3-marriage-s.webp 500w, ./assets/images/slider/banner-slide-3-marriage-m.webp 1200w"
-						sizes="(max-width: 500px) 500px, 1200px" width="1200px" height="555px"
-						alt="Banner image 3 marriage"loading="lazy" >
+						sizes="(max-width: 500px) 500px, 1200px" width="1200" height="555"
+						alt="Banner image 3 marriage" loading="lazy" >
 					</div>
 				</div>
-				<button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide="prev" width="956" height="446">
+				<button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide="prev" >
 					<span class="carousel-control-prev-icon" aria-hidden="true"></span>
 					<span class="visually-hidden">Previous</span>
 				</button>
-				<button class="carousel-control-next" type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide="next" width="956" height="446">
+				<button class="carousel-control-next" type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide="next">
 					<span class="carousel-control-next-icon" aria-hidden="true"></span>
 					<span class="visually-hidden">Next</span>
 				</button>
@@ -118,15 +117,15 @@
 			<h2 class="title">Portfolio</h2>
 			<div class="container py-3">
 				<div class="gallery" style="display: none">
-					<img data-gallery-tag="Concert" class="gallery-item" src="./assets/images/gallery/concerts/concert-arron-paul-min.webp" alt="concert-arron-paul" width="466" height="621" loading="lazy"/>
-					<img data-gallery-tag="Entreprises" class="gallery-item" src="./assets/images/gallery/entreprise/entreprise-ali-morshedlou-min.webp" alt="entreprise ali morshedlou" width="466" height="699" loading="lazy"/>
-					<img data-gallery-tag="Entreprises" class="gallery-item" src="./assets/images/gallery/entreprise/entreprise-jason-goodman-min.webp" alt="entreprise jason goodman" width="466" height="315"  loading="lazy"/>
-					<img data-gallery-tag="Mariages" class="gallery-item" src="./assets/images/gallery/mariage/marriage-hannah-busing-min.webp" alt="mariage hannah busing" width="466" height="373"  loading="lazy"/>
-					<img data-gallery-tag="Portrait" class="gallery-item" src="./assets/images/gallery/portraits/portrait_men-min.webp" alt="portrait men" width="466" height="698"  loading="lazy"/>
-					<img data-gallery-tag="Mariages" class="gallery-item" src="./assets/images/gallery/mariage/marriage-jakob-owens-min.webp" alt="mariage jakob owens" width="466" height="699"  loading="lazy"/>
-					<img data-gallery-tag="Portrait" class="gallery-item" src="./assets/images/gallery/portraits/portrait_women-min.webp" alt="portrait women" width="466" height="700"  loading="lazy"/>
-					<img data-gallery-tag="Concert" class="gallery-item" src="./assets/images/gallery/concerts/concert-austin-neill-min.webp" alt="concert austin neill" width="466" height="311"  loading="lazy"/>
-					<img data-gallery-tag="Entreprises" class="gallery-item" src="./assets/images/gallery/entreprise/entreprise-mateus-campos-felipe-min.webp" alt="entreprise mateus campos felipe" width="466" height="285"  loading="lazy"/>
+					<img data-gallery-tag="Concert" class="gallery-item" src="./assets/images/gallery/concerts/concert-arron-paul-min.webp" alt="concert-arron-paul" width="466" height="621" loading="lazy">
+					<img data-gallery-tag="Entreprises" class="gallery-item" src="./assets/images/gallery/entreprise/entreprise-ali-morshedlou-min.webp" alt="entreprise ali morshedlou" width="466" height="699" loading="lazy">
+					<img data-gallery-tag="Entreprises" class="gallery-item" src="./assets/images/gallery/entreprise/entreprise-jason-goodman-min.webp" alt="entreprise jason goodman" width="466" height="315"  loading="lazy">
+					<img data-gallery-tag="Mariages" class="gallery-item" src="./assets/images/gallery/mariage/marriage-hannah-busing-min.webp" alt="mariage hannah busing" width="466" height="373"  loading="lazy">
+					<img data-gallery-tag="Portrait" class="gallery-item" src="./assets/images/gallery/portraits/portrait_men-min.webp" alt="portrait men" width="466" height="698"  loading="lazy">
+					<img data-gallery-tag="Mariages" class="gallery-item" src="./assets/images/gallery/mariage/marriage-jakob-owens-min.webp" alt="mariage jakob owens" width="466" height="699"  loading="lazy">
+					<img data-gallery-tag="Portrait" class="gallery-item" src="./assets/images/gallery/portraits/portrait_women-min.webp" alt="portrait women" width="466" height="700"  loading="lazy">
+					<img data-gallery-tag="Concert" class="gallery-item" src="./assets/images/gallery/concerts/concert-austin-neill-min.webp" alt="concert austin neill" width="466" height="311"  loading="lazy">
+					<img data-gallery-tag="Entreprises" class="gallery-item" src="./assets/images/gallery/entreprise/entreprise-mateus-campos-felipe-min.webp" alt="entreprise mateus campos felipe" width="466" height="285" loading="lazy">
 				</div>
 			</div>
 			<div class="quote">
@@ -188,18 +187,18 @@
 						<h3>Une question ? Une demande de devis ?</h3>
 						<p> N’hésitez pas à m’écrire ! Je vous répondrais en moins de 24 heures</p>
 					</div>
-					<form action="" method="post">
+					<form action="#" method="post">
 						<label for="nom">Nom</label>
 						<input type="text" name="nom" id="nom">
 						<label for="email">Email</label>
 						<input type="email" name="email" id="email">
 						<label for="message">Message</label>
 						<textarea name="message" id="message" cols="30" rows="10"></textarea>
-						<input type="submit" value="Envoyer"/>
+						<input type="submit" value="Envoyer">
 					</form>
 				</div>
 				<div class="picture right">
-					<img src="./assets/images/camera-min.webp" alt="Camera" width="514" height="513" loading="lazy" >
+					<img src="./assets/images/camera-min.webp" alt="Camera" width="514" height="513" loading="lazy">
 				</div>
 			</div>
 		</section>
