replace original image to other file, corrected cache policy, corrected schema.org

--- a/index.html
+++ b/index.html
@@ -35,16 +35,17 @@
 		{
 			"@context": "http://schema.org",
 			"@type": "LocalBusiness",
+			"image":"https://github.com/yoonju88/Projet_9-NinaCarducci/blob/main/assets/images/nina-min.webp",
 			"address": {
 				"@type": "PostalAddress",
 				"streetAddress": "68 avenue Alsace-Lorraine",
 				"addressLocality": "Bordeaux",
-				"postalCode": "33200"
+				"postalCode": "33200",
+				"addressCountry" : "FR"
 			},
-			"telephone": "05 56 67 78 89",
+			"telephone": "+33 5 56 67 78 89",
 			"name": "Nina Carducci",
-			"openingHours": "Mo-Fr 10:00-19:00",
-			"image":"https://github.com/yoonju88/Projet_9-NinaCarducci/blob/main/assets/images/nina-min.webp"
+			"openingHours": "Mo-Fr 10:00-19:00"			
 		}
 	</script>
 	<title>Nina Carducci</title>
@@ -209,6 +210,7 @@
 			<span itemprop="streetAddress">68 avenue Alsace-Lorraine,</span>
 			<span itemprop="postalCode">33200</span>
 			<span itemprop="addressLocality"> Bordeaux</span>
+			<span itemprop="addressCountry">France</span>
 		</div>
 		<p>Tel : <span itemprop="telephone">05 56 67 78 89</span></p>
 		<p>Heure d'ouverture : <span itemprop="openingHours">Du lundi au vendredi 10h - 19h</span></p>
