--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
 		{
 			"@context": "http://schema.org",
 			"@type": "LocalBusiness",
-			"image":"https://github.com/yoonju88/Projet_9-NinaCarducci/blob/main/assets/images/nina-min.webp",
+			"image":"https://raw.githubusercontent.com/yoonju88/Projet_9-NinaCarducci/main/assets/images/nina-min.webp",
 			"address": {
 				"@type": "PostalAddress",
 				"streetAddress": "68 avenue Alsace-Lorraine",
@@ -45,7 +45,11 @@
 			},
 			"telephone": "+33 5 56 67 78 89",
 			"name": "Nina Carducci",
-			"openingHours": "Mo-Fr 10:00-19:00"			
+			"openingHours": [
+			"Mo-Fr 10:00-19:00"
+			],
+			"priceRange": "$$",
+			"url": "https://yoonju88.github.io/Projet_9-NinaCarducci/"
 		}
 	</script>
 	<title>Nina Carducci</title>
@@ -147,7 +151,7 @@
 						<p>Pour capturer vos moments les plus précieux et garder un souvenir impérissable. Je me déplace en Île-de-France pour réaliser vos photos</p>
 					</div>
 					<div class="service__price" >
-						<h4>350€/demi journée</h4>
+						<h4 itemprop="priceRange">350€/demi journée</h4>
 						<span>Matériel, déplacement inclus</span>
 					</div>
 				</article>
@@ -157,7 +161,7 @@
 						<p>Vous souhaitez retoucher vos photos pour un résultat professionnel ? Bénéficier d’un rendu optimal pour vos publications</p>
 					</div>
 					<div class="service__price" >
-						<h4>50€/photo</h4>
+						<h4 itemprop="priceRange">50€/photo</h4>
 						<span>2 AR par photo</span>
 					</div>
 				</article>
@@ -167,7 +171,7 @@
 						<p>Partagez avec vos proches et vos clients les photos des moments partagés ensemble à travers un album photo personnalisé</p>
 					</div>
 					<div class="service__price">
-						<h4>400€ album A4</h4>
+						<h4 itemprop="priceRange">400€ album A4</h4>
 						<span>30 pages recto/verso</span>
 					</div>
 				</article>
@@ -213,6 +217,7 @@
 			<span itemprop="addressCountry">France</span>
 		</div>
 		<p>Tel : <span itemprop="telephone">05 56 67 78 89</span></p>
+		<p itemprop="url">https://yoonju88.github.io/Projet_9-NinaCarducci/</p>
 		<p>Heure d'ouverture : <span itemprop="openingHours">Du lundi au vendredi 10h - 19h</span></p>
 	</footer>
 </body>
