test remove meta  fb:app_id, remove price range for schema.org

--- a/index.html
+++ b/index.html
@@ -19,8 +19,7 @@
 	<script src="./assets/scripts.js" defer ></script>
 	<link rel="icon" href="assets/images/favicon.ico">
 	<meta property="og:site_name" content="Nina Carducci">
-	<meta property="og:type" content="website">
-	<meta property="fb:app_id" content="your_app_id_goes_here">
+	<meta property="og:type" content="website">	
 	<meta property="og:url" content="https://yoonju88.github.io/Projet_9-NinaCarducci/">
 	<meta property="og:title" content="Nina Carducci - photograph" >
 	<meta property="og:description" content="Nina Carducci est une photographe française, spécialisée dans la prise de vos moments les plus précieux.">
@@ -45,10 +44,7 @@
 			},
 			"telephone": "+33 5 56 67 78 89",
 			"name": "Nina Carducci",
-			"openingHours": [
-			"Mo-Fr 10:00-19:00"
-			],
-			"priceRange": "$$",
+			"openingHours": "Mo-Fr 10:00-19:00",
 			"url": "https://yoonju88.github.io/Projet_9-NinaCarducci/"
 		}
 	</script>
@@ -151,7 +147,7 @@
 						<p>Pour capturer vos moments les plus précieux et garder un souvenir impérissable. Je me déplace en Île-de-France pour réaliser vos photos</p>
 					</div>
 					<div class="service__price" >
-						<h4 itemprop="priceRange">350€/demi journée</h4>
+						<h4>350€/demi journée</h4>
 						<span>Matériel, déplacement inclus</span>
 					</div>
 				</article>
@@ -161,7 +157,7 @@
 						<p>Vous souhaitez retoucher vos photos pour un résultat professionnel ? Bénéficier d’un rendu optimal pour vos publications</p>
 					</div>
 					<div class="service__price" >
-						<h4 itemprop="priceRange">50€/photo</h4>
+						<h4>50€/photo</h4>
 						<span>2 AR par photo</span>
 					</div>
 				</article>
@@ -171,7 +167,7 @@
 						<p>Partagez avec vos proches et vos clients les photos des moments partagés ensemble à travers un album photo personnalisé</p>
 					</div>
 					<div class="service__price">
-						<h4 itemprop="priceRange">400€ album A4</h4>
+						<h4>400€ album A4</h4>
 						<span>30 pages recto/verso</span>
 					</div>
 				</article>
