relocated itemscope itemtype in header section

--- a/index.html
+++ b/index.html
@@ -50,9 +50,9 @@
 	</script>
 	<title>Nina Carducci</title>
 </head>
-<body  itemscope itemtype="http://schema.org/LocalBusiness">
+<body>
 	<header>
-		<div class="top-header">
+		<div class="top-header" itemscope itemtype="http://schema.org/LocalBusiness">
 			<h1 class="name" itemprop="name">Nina Carducci</h1>
 			<nav class="nav">   
 				<ul>
