test schema code

--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
 				"streetAddress": "68 avenue Alsace-Lorraine",
 				"addressLocality": "Bordeaux",
 				"postalCode": "33200",
-				"addressCountry" : "FR"
+				"addressCountry" : "FRANCE"
 			},
 			"telephone": "+33 5 56 67 78 89",
 			"name": "Nina Carducci",
