--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 	<link rel="stylesheet" href="./assets/style.min.css">
 	<link rel="preconnect" href="https://fonts.googleapis.com">
 	<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-	<link href="https://fonts.googleapis.com/css2?family=Inter&family=Spectral:ital,wght@0,400;1,300;1,400;1,800&display=swap" rel="stylesheet">
+	<link href="https://fonts.googleapis.com/css2?family=Inter&family=Spectral:ital,wght@0,400;1,300;1,400;1,800&display=swap" rel="stylesheet" >
 	<meta charset="utf-8">
 	<meta name="language" content="fr-FR">
 	<meta name="robots" content="index, follow">
@@ -50,10 +50,10 @@
 	</script>
 	<title>Nina Carducci</title>
 </head>
-<body itemscope itemtype="http://schema.org/LocalBusiness">
+<body>
 	<header>
 		<div class="top-header">
-			<h1 class="name" itemprop="name">Nina Carducci</h1>
+			<h1 class="name">Nina Carducci</h1>
 			<nav class="nav">   
 				<ul>
 					<li><a href="#about">À propos</a></li>
@@ -105,7 +105,7 @@
 	<main>
 		<section id="about"  >
 				<div class="picture left">
-					<img itemprop="image" src="./assets/images/nina-min.webp" alt="image Nina Carducci" width="514" height="513">
+					<img src="./assets/images/nina-min.webp" alt="image Nina Carducci" width="514" height="513">
 				</div>
 				<div id="about-me">
 					<h2 class="about-me__title" >A propos de moi</h2>
@@ -204,7 +204,9 @@
 			</div>
 		</section>
 	</main>
-	<footer hidden>
+<!--
+	<footer>
+		<h5>Nina Carducci</h5>
 		<div itemprop="address" itemscope itemtype="http://schema.org/PostalAddress"> 
 			<b>Adresse : </b>
 			<span itemprop="streetAddress">68 avenue Alsace-Lorraine,</span>
@@ -213,8 +215,8 @@
 			<span itemprop="addressCountry">France</span>
 		</div>
 		<p>Tel : <span itemprop="telephone">05 56 67 78 89</span></p>
-		<p itemprop="url">https://yoonju88.github.io/Projet_9-NinaCarducci/</p>
 		<p>Heure d'ouverture : <span itemprop="openingHours">Du lundi au vendredi 10h - 19h</span></p>
-	</footer>
+		<p itemprop="url">https://yoonju88.github.io/Projet_9-NinaCarducci/</p>
+	</footer> -->
 </body>
 </html>
