--- a/index.html
+++ b/index.html
@@ -181,7 +181,7 @@
 				<figcaption class="quote__author">- Richard Avedon</figcaption>
 			</figure>
 		</div>
-		<section id="contact" >
+		<footer id="contact" >
 			<div class="container">
 				<div class="form-container">
 					<div class="form-container__title">
@@ -202,21 +202,6 @@
 					<img src="./assets/images/camera-min.webp" alt="Camera" width="514" height="513" loading="lazy">
 				</div>
 			</div>
-		</section>
-	</main>
-<!--
-	<footer>
-		<h5>Nina Carducci</h5>
-		<div itemprop="address" itemscope itemtype="http://schema.org/PostalAddress"> 
-			<b>Adresse : </b>
-			<span itemprop="streetAddress">68 avenue Alsace-Lorraine,</span>
-			<span itemprop="postalCode">33200</span>
-			<span itemprop="addressLocality"> Bordeaux</span>
-			<span itemprop="addressCountry">France</span>
-		</div>
-		<p>Tel : <span itemprop="telephone">05 56 67 78 89</span></p>
-		<p>Heure d'ouverture : <span itemprop="openingHours">Du lundi au vendredi 10h - 19h</span></p>
-		<p itemprop="url">https://yoonju88.github.io/Projet_9-NinaCarducci/</p>
-	</footer> -->
-</body>
+		</footer>
+	</body>
 </html>
