added miss close tag main

--- a/index.html
+++ b/index.html
@@ -181,6 +181,7 @@
 				<figcaption class="quote__author">- Richard Avedon</figcaption>
 			</figure>
 		</div>
+	</main>
 		<footer id="contact" >
 			<div class="container">
 				<div class="form-container">
