change footer section

--- a/index.html
+++ b/index.html
@@ -15,8 +15,8 @@
 	<meta name="theme-color" content="#f6d2b8">
 	<script src="https://code.jquery.com/jquery-3.4.1.min.js" integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo=" crossorigin="anonymous" defer></script>
 	<script src="./assets/bootstrap/bootstrap.bundle.min.js" defer ></script>
-	<script src="./assets/maugallery.js" defer ></script>
-	<script src="./assets/scripts.js" defer ></script>
+	<script src="./assets/maugallery.min.js" defer ></script>
+	<script src="./assets/scripts.min.js" defer ></script>
 	<link rel="icon" href="assets/images/favicon.ico">
 	<meta property="og:site_name" content="Nina Carducci">
 	<meta property="og:type" content="website">	
@@ -180,9 +180,8 @@
 				</blockquote>
 				<figcaption class="quote__author">- Richard Avedon</figcaption>
 			</figure>
-		</div>
-	</main>
-		<footer id="contact" >
+		</div>	
+		<section id="contact" >
 			<div class="container">
 				<div class="form-container">
 					<div class="form-container__title">
@@ -203,6 +202,7 @@
 					<img src="./assets/images/camera-min.webp" alt="Camera" width="514" height="513" loading="lazy">
 				</div>
 			</div>
-		</footer>
+		</section>
+		</main>
 	</body>
 </html>
