--- a/index.html
+++ b/index.html
@@ -8,6 +8,8 @@
 	<link rel="preconnect" href="https://fonts.googleapis.com">
 	<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 	<link href="https://fonts.googleapis.com/css2?family=Inter&family=Spectral:ital,wght@0,400;1,300;1,400;1,800&display=swap" rel="stylesheet" >
+	<link rel="preload" as="image" href="./assets/images/slider/banner-slide-1-man-m.webp">
+	<link rel="preload" as="image" href="./assets/images/nina-min.webp">
 	<meta charset="utf-8">
 	<meta name="language" content="fr-FR">
 	<meta name="robots" content="index, follow">
