--- a/index.html
+++ b/index.html
@@ -10,6 +10,8 @@
 	<link href="https://fonts.googleapis.com/css2?family=Inter&family=Spectral:ital,wght@0,400;1,300;1,400;1,800&display=swap" rel="stylesheet" >
 	<link rel="preload" as="image" href="./assets/images/slider/banner-slide-1-man-m.webp">
 	<link rel="preload" as="image" href="./assets/images/nina-min.webp">
+	<meta http-equiv="Cache-Control" content="max-age=31536000, public">
+    <meta http-equiv="Expires" content="Tue, 25 Jun 2025 21:31:12 GMT">
 	<meta charset="utf-8">
 	<meta name="language" content="fr-FR">
 	<meta name="robots" content="index, follow">
